--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-opencv-python
-numpy
-pillow
-selenium
-pyzbar
+opencv-python~=4.5.3.56
+numpy~=1.18.5
+pillow~=8.1.0
+selenium~=4.1.3
+pyzbar~=0.1.9
+webdriver-manager
+telegram-send
